Fix seconds parsing

--- a/index.gohtml
+++ b/index.gohtml
@@ -108,6 +108,7 @@
 	</form>
 </div>
 
+{{/* TODO: add a button to store the current metrics, and ability to diff it with previously stored ones. */}}
 <h2>Metrics</h2>
 <div class="box">
 	<table id="metrics"><tbody>
